Bug 165023 - Plasma a hundred percert processor use
Summary: Plasma a hundred percert processor use
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-26 16:41 UTC by Bráulio Barros de Oliveira
Modified: 2008-06-28 12:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (144.20 KB, image/png)
2008-06-26 16:43 UTC, Bráulio Barros de Oliveira
Details
cachegrind output (2.12 KB, application/octet-stream)
2008-06-27 16:52 UTC, Bráulio Barros de Oliveira
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bráulio Barros de Oliveira 2008-06-26 16:41:38 UTC
Version:           4.00.83 (KDE 4.0.83 (KDE 4.1 Beta2) (using 4.00.83 (KDE 4.0.83 (KDE 4.1 Beta2), compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.25-ARCH

On my plasma desktop 1 (see screenshot) plasma process togheter with X, uses a hundred percer of my processor. The bug doesn't show up when I switch to other desktops.
Comment 1 Bráulio Barros de Oliveira 2008-06-26 16:43:27 UTC
Created attachment 25627 [details]
screenshot
Comment 2 Aaron J. Seigo 2008-06-26 22:15:37 UTC
what is different between desktop 1 and the others? e.g. do you have certain windows that only appear on the problem desktop?

as a bit of an advanced thought: can you run the app through valgrind --tool=cachegrind and attach the resulting output to this bug report? it would be interesting to see what's using the time.
Comment 3 Bráulio Barros de Oliveira 2008-06-27 16:52:20 UTC
it looks like related to out of space in the panel, and that's the difference between the desktop 1 and the others. the panel doesn't have enough space for the systray, so it uses spaces of its neighbours applets.
to reproduce i just open more than 5 windows.
i've attached the cachegrind output.
Comment 4 Bráulio Barros de Oliveira 2008-06-27 16:52:58 UTC
Created attachment 25654 [details]
cachegrind output
Comment 5 Bráulio Barros de Oliveira 2008-06-27 16:55:48 UTC
actually the bug happens when there is enough windows and systray apps to make the systray aplet don't have enough space to itself
using kde 20080625
Comment 6 Sebastian Sauer 2008-06-27 22:11:07 UTC
Thanks for the feedback, Bráulio. But I fear you did attach the wrong output ;)

a small example;
cd ~ && mkdir bla && cd bla
valgrind --tool=cachegrind kwrite
[once it shows up choose File=>Quit and once vallgrind finished do]
ls
[and it may show some new file name e.g. "cachegrind.out.12345" which contains then the useful information :-) ]

you are able to see the content by running e.g. KCachegrind and File=>Open the ~/bla/cachegrind.out.12345 file which provides then profile-details. btw, probably tar.gz the file before upload since that let's the file shrink quit a lot ;)
Comment 7 Marco Martin 2008-06-27 23:22:01 UTC
is it fixed in today revision?
if so it could be a duplicate of 164972
Comment 8 Bráulio Barros de Oliveira 2008-06-28 00:30:27 UTC
here it comes: http://66.249.9.34/brauliobo/files/cachegrind.out.4636
Comment 9 Marco Martin 2008-06-28 12:35:20 UTC
SVN commit 825459 by mart:

calling resize() of an element in a layout is asking for problems..

BUG: 165023


 M  +2 -7      lockout.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=825459