calling resize() of an element in a layout is asking for problems..

BUG: 165023

svn path=/trunk/KDE/kdebase/workspace/; revision=825459